[c] Fixed alignment, items board background, and alien mark as used

--- a/src/games/comunicacao-alienigena/comunicacao-alienigena.scss
+++ b/src/games/comunicacao-alienigena/comunicacao-alienigena.scss
@@ -5,10 +5,19 @@
   background-size: 1000% 1000%;
 }
 
+.boards-container {
+  margin: get-unit(2 0);
+  width: 100%;
+  justify-content: center;
+  align-items: flex-start;
+}
+
 .objects-grid {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   gap: get-unit(2);
+  @include contained;
+  background: get-color('white', 5, 0.85);
 
   &__item {
     border-radius: get-unit(3);
@@ -34,7 +43,7 @@
     }
 
     &--BLANK {
-      border-color: get-color('yellow', 3);
+      border-color: get-color('brown', 2);
 
       .glyph-card {
         background: get-color('yellow', 1);
@@ -78,8 +87,8 @@
     }
 
     &--BLANK {
-      border-color: get-color('yellow', 3);
-      background: get-color('yellow', 4);
+      border-color: get-color('brown', 3);
+      background: get-color('brown', 4);
     }
 
     &--ask {
@@ -133,8 +142,8 @@
     }
 
     &--BLANK {
-      border-color: get-color('yellow', 3);
-      background: get-color('yellow', 1);
+      border-color: get-color('brown', 3);
+      background: get-color('brown', 1);
     }
   }
 
@@ -147,8 +156,9 @@
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   gap: get-unit(2);
-  margin: get-unit(2);
+  margin-left: get-unit(2);
   background: get-color('teal', 3);
+  border-radius: $border-radius;
   padding: get-unit(2);
 
   &__item {
